syntax = "proto3";
package entangle.distributorsauth;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/Entangle-Protocol/entangle-blockchain/x/distributorsauth/types";

message DistributorInfo {
  string Address     = 1;
  uint64 end_date   = 2;
}

message Admin {
  string address = 1;
  bool edit_option = 2;
}


// AddDistributorProposal 
// with a deposit
message AddDistributorProposal {
  // option (gogoproto.goproto_getters)         = false;
  // option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  // string Title        = 1;
  // string Description  = 2;
  // DistributorInfo Distributor = 3 [(gogoproto.nullable) = false];
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = true;
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title       = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  string address     = 3 [(gogoproto.moretags) = "yaml:\"address\""];
  string end_date    = 4 [(gogoproto.moretags) = "yaml:\"end_date\""];
  string deposit     = 5 [(gogoproto.moretags) = "yaml:\"deposit\""];
}




